# hk-langgraph-lecture

./: README.md  app.py  main.py  pyproject.toml
01_LangGraph/01_Introduction/: 01-LangChain-V1-Overview.ipynb  02-Product-Hierarchy.ipynb
01_LangGraph/02_LangGraph_Basics/: 01-LangGraph-Python-Basics.ipynb  02-Models.ipynb  03-Messages.ipynb  04-StateGraph-Basics.ipynb  05-ChatBot.ipynb  06-Tools-Integration.ipynb  07-Memory-Checkpointer.ipynb  08-Human-In-The-Loop.ipynb  09-State-Management.ipynb  10-team-practice.ipynb  function_calling.ipynb
01_LangGraph/03_Thinking_in_LangGraph/: 01-Workflows-vs-Agents.ipynb  02-Design-Principles.ipynb  03-Reliability-Engineering.ipynb
01_LangGraph/04_LangGraph_Advanced/: 01-Functional-API.ipynb  02-Subgraphs.ipynb  03-Branching-Parallel.ipynb  04-Durable-Execution.ipynb  05-DeleteMessages.ipynb  06-Conversation-Summary.ipynb  07-Streaming-Steps.ipynb
02_Agent/05_Agent_Development/: 01-Create-Agent.ipynb  02-Tools-V1.ipynb  03-Structured-Output.ipynb  04-Streaming-V1.ipynb  05-Runtime-Context.ipynb  06-MCP-Server-Basics.ipynb  07-MCP-Agent-Integration.ipynb  08-MCP-Advanced-Servers.ipynb
02_Agent/06_Middleware/: 01-Middleware-Basics.ipynb  02-Human-In-The-Loop-V1.ipynb  03-Context-Engineering.ipynb  04-Prebuilt-Middleware.ipynb  05-Guardrails.ipynb  hello_world.txt
02_Agent/07_Memory/: 01-Short-Term-Memory.ipynb  02-Long-Term-Memory.ipynb
02_Agent/08_RAG/: 01-Graph-Based-RAG.ipynb  02-Agentic-RAG.ipynb  03-CRAG-Self-RAG.ipynb  04-Adaptive-RAG.ipynb  05-Retrieval.ipynb
02_Agent/09_Multi_Agent/: 02-Supervisor.ipynb  (+7 more)
(+96 files in other folders)
